# rustex

./: Cargo.toml
src/: _old_lib.rs  lib.rs
src/data/: hexagon.rs  mod.rs  quad.rs  triangle.rs  vertex.rs
src/pipelines/: edge_pipeline.rs  mod.rs  polygon_pipeline.rs
src/shaders/: polygon_shader.wgsl
web/: index.html  main.js  style.css
