[package]
name = "rustex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3.70"
features = [
    'Document',
    'DomRect',
    'Window',
    'HtmlElement',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'MouseEvent',
]
