[package]
name = "rustex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.11.5"
js-sys = "0.3.70"
log = "0.4.22"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wgpu = { version = "22.1.0", features = ["webgl"] }
winit = { version = "0.29" }

[dependencies.web-sys]
version = "0.3.70"
features = [
    'Document',
    'DomRect',
    'Window',
    'HtmlElement',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'MouseEvent',
]
